[project]
name = "ipmimonitoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Christer Weinigel", email = "christer@weinigel.se" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
