[project]
name = "ipmimonitoring"
version = "0.1.2"
description = "A python wrapper for libipmimonitoring from freeipmi"
readme = "README.md"
authors = [
    { name = "Christer Weinigel", email = "christer@weinigel.se" }
]
requires-python = ">=3.8"
dependencies = [
    "cffi>=1.15.1",
    "prettytable>=3.10.0",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
homepage = "https://github.com/wingel/ipmimonitoring"
repository = "https://github.com/wingel/ipmimonitoring.git"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
